tests/errors/missing_self_in_cpdef_method_T156.pyx

cdef class B:
    cpdef b():
        pass

_ERRORS = u"""
3:4: C method has no self argument
"""
